--- a/paginaAbbonamenti.html
+++ b/paginaAbbonamenti.html
@@ -15,12 +15,12 @@
                     <li> <a href="homePage.html">Home</a></li>
                     <li> <a href="paginaAbbonamenti.html">Abbonamenti</a></li>
                     <li> <a href="paginaSedi.html">Sedi</a></li>
-                    <li> <a href="paginaEventi.html">Eventi</a></li>
+                    <li> <a href="paginaChiSiamo.html">Chi siamo</a></li>
                     <li> <a href="paginaContattaci.html">Contatti</a></li>
                 </ul>
             </div>
             <div class="container">
-                <h2>Scegli il tuo piano ideale</h2>
+                <h1>Scegli il tuo piano ideale</h1>
                 <div class="price-row">
                     <div class="price-col">
                         <p>Base</p>
