--- a/paginaChiSiamo.html
+++ b/paginaChiSiamo.html
@@ -6,8 +6,8 @@
     </head> 
 
     <body>
-        <div class="homeBanner">
-            <div class="homeNavBar">
+        <div class="chisiamoBanner">
+            <div class="NavBar">
                 <a href="homePage.html">
                     <img src="images/logo/logo.png" class="logo"> 
                 </a>
@@ -19,16 +19,10 @@
                     <li> <a href="paginaContattaci.html">Contatti</a></li>
                 </ul>
             </div>
-            <div class="content">
-                <h1>DIVENTA LA VERSIONE MIGLIORE DI TE STESSO</h1>
-                <p>L'unica palestra in cui potrai avere la Micela come personal trainer</p>
-                <div class="homebuttons">
-                    <a href="paginaAbbonamenti.html">
-                        <button type = "button"><span></span>Abbonati</button>
-                    </a>
-                    <a href="paginaContattaci.html">
-                        <button type = "button"><span></span>Contattaci</button>
-                    </a>
+            <div class="chisiamoContent">
+                <h1>Chi siamo?</h1>
+                <div class="locations">
+                    
                 </div>
 
                 
