--- a/homePage.html
+++ b/homePage.html
@@ -6,8 +6,8 @@
     </head> 
 
     <body>
-        <div class="sediBanner">
-            <div class="NavBar">
+        <div class="homeBanner">
+            <div class="homeNavBar">
                 <a href="homePage.html">
                     <img src="images/logo/logo.png" class="logo"> 
                 </a>
@@ -19,10 +19,16 @@
                     <li> <a href="paginaContattaci.html">Contatti</a></li>
                 </ul>
             </div>
-            <div class="sediContent">
-                <h2>Le nostre sedi</h2>
-                <div class="locations">
-                    
+            <div class="content">
+                <h1>DIVENTA LA VERSIONE MIGLIORE DI TE STESSO</h1>
+                <p>L'unica palestra in cui potrai avere la Micela come personal trainer</p>
+                <div class="homebuttons">
+                    <a href="paginaAbbonamenti.html">
+                        <button type = "button"><span></span>Abbonati</button>
+                    </a>
+                    <a href="paginaContattaci.html">
+                        <button type = "button"><span></span>Contattaci</button>
+                    </a>
                 </div>
 
                 
