--- a/paginaChiSiamo.html
+++ b/paginaChiSiamo.html
@@ -12,7 +12,7 @@
                     <img src="images/logo/logo.png" class="logo"> 
                 </a>
                 <ul>
-                    <li> <a href="homePage.html">Home</a></li>
+                    <li> <a href="index.html">Home</a></li>
                     <li> <a href="paginaAbbonamenti.html">Abbonamenti</a></li>
                     <li> <a href="paginaSedi.html">Sedi</a></li>
                     <li> <a href="paginaChiSiamo.html">Chi siamo</a></li>
