--- a/paginaAbbonamenti.html
+++ b/paginaAbbonamenti.html
@@ -8,7 +8,7 @@
     <body>
         <div class="subcriptionBanner">
             <div class="navbar">
-                <a href="homePage.html">
+                <a href="index.html">
                     <img src="images/logo/logo.png" class="logo"> 
                 </a>
                 <ul>
@@ -19,8 +19,11 @@
                     <li> <a href="paginaContattaci.html">Contatti</a></li>
                 </ul>
             </div>
-            <div class="container">
+            <div class="abbonamentiContent">
                 <h1>Scegli il tuo piano ideale</h1>
+                <br>
+                <br>
+                <br>
                 <div class="price-row">
                     <div class="price-col">
                         <p>Base</p>
