--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
         <div class="homeBanner">
             <div class="homeNavBar">
-                <a href="homePage.html">
+                <a href="index.html">
                     <img src="images/logo/logo.png" class="logo"> 
                 </a>
                 <ul>
-                    <li> <a href="homePage.html">Home</a></li>
+                    <li> <a href="index.html">Home</a></li>
                     <li> <a href="paginaAbbonamenti.html">Abbonamenti</a></li>
                     <li> <a href="paginaSedi.html">Sedi</a></li>
                     <li> <a href="paginaChiSiamo.html">Chi siamo</a></li>
