--- a/paginaContattaci.html
+++ b/paginaContattaci.html
@@ -8,7 +8,7 @@
     <body class="Contattaci">
         <div class="contattaciBanner">
             <div class="NavBar">
-                <a href="homePage.html">
+                <a href="index.html">
                     <img src="images/logo/logo.png" class="logo"> 
                 </a>
                 <ul>
