--- a/paginaSedi.html
+++ b/paginaSedi.html
@@ -8,7 +8,7 @@
     <body>
         <div class="sediBanner">
             <div class="NavBar">
-                <a href="homePage.html">
+                <a href="index.html">
                     <img src="images/logo/logo.png" class="logo"> 
                 </a>
                 <ul>
