--- a/paginaChiSiamo.html
+++ b/paginaChiSiamo.html
@@ -40,7 +40,7 @@
                     <p>
                         Benvenuti a Micy Fit, la nostra palestra si distingue per un ottimo rapporto qualità-prezzo.
                          I nostri personal trainer, fra cui La Micela, sono altamente qualificati e offrono un supporto personalizzato per raggiungere i vostri obiettivi di fitness. 
-                         Inoltre, disponiamo di macchinari all'avanguardia per garantire un'esperienza di allenamento di altissimaa qualità. 
+                         Inoltre, disponiamo di macchinari all'avanguardia per garantire un'esperienza di allenamento di altissima qualità. 
                          Unisciti a noi e trasforma il tuo corpo e la tua salute con Micy Fit.
                     </p>
                     <br>
